# gazebo_racing_tracks

./: CMakeLists.txt  README.md  package.xml
launch/: dirt_track.launch.py  grass_track.launch.py  sand_track.launch.py  snow_track.launch.py
worlds/: dirt_track.sdf  grass_track.sdf  sand_track.sdf  snow_track.sdf
worlds/meshes/: dirt_track.mtl  grass_track.mtl  sand_track.mtl  snow_track.mtl
